# DarkMaze

./: .darkmaze_designer_poi.yaml  .gitignore  README.md  pyproject.toml
.cursor/plans/: hybrid_acoustics_and_compact_perception_grid.plan.md
cli/: __init__.py  main.py
config/: monster_types.yaml
designer/: __init__.py  app.py
docs/: GM_MANUAL.md  PHASE_1_IMPLEMENTATION_PLAN.md  plan_v2.md
game/: __init__.py  acoustics.py  actors.py  maze.py  maze_gen.py  protocol_models.py  resolver.py  template_edit.py  template_io.py  tuning.py
server/: main.py  sessions.py
templates/: example.yaml
tests/: test_maze.py  test_resolver.py  test_sessions.py  test_template_edit.py
web/: gm.html  index.html  package-lock.json  package.json  vite.config.ts
web/src/: gm.css  gm.ts  gm_maze_canvas.ts  gm_monster_editor.ts  main.ts  monster_mirror_render.ts  player_view_render.ts  style.css
